--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
 <head>
 	<title>Coolest Frog in the Swamp</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header>
 		<h1>Cool Frog</h1>
+			<nav>
+				<h4>Contact</h4>			
+				<h4>Portfolio</h4>
+				<h4>About</h4>
+				
+			</nav>
 	</header>	
 
-	<nav>
-		<h4>About Portfolio Contact</h4>
-	</nav>
-
+	
 	<section>
 			<article>
 				<h2>About Me</h2>
-					<img src="assets/images/coolfrog.bmp">
-						<p>
+						<img src="assets/images/coolfrog.bmp">
+						<p id="aboutMe">							
 							What the fuck did you just fucking say about me, you little bitch? I'll have you know I graduated top of my class in summoning Deviljho, and I've been involved in numerous secret raids on whack hunters, and I have over 300 confirmed kills. I am trained in playing my nose flute and I'm the top fluter in the entire Deserted Island. You are nothing to me but just another . I will triple cart you the fuck out with precision the likes of which has never been seen before on this New Continent, mark my fucking words. You think you can get away with saying that shit to me over the Gathering Hall? Think again, fucker. As we speak I am contacting my secret network of Deviljho's across the Ancient Forest and your gathering hall code is being traced right now so you better prepare for the storm, maggot. The storm that wipes out the pathetic little thing you call your life. You're fucking dead, kid. My Deviljho's can be anywhere, anytime, and they can kill you in over seven hundred ways, and that's just with their dragon breath. 
-
+						</p>
+						<p>
 							Not only am I extensively trained in summoning Deviljho, but I have access to the entire arsenal of the monsters that spawn and I will use it to its full extent to wipe your miserable ass off the face of the New continent, you little shit. If only you could have known what unholy retribution your little "clever" comment was about to bring down upon you, maybe you would have held your fucking tongue. But you couldn't, you didn't, and now you're paying the price, you goddamn idiot. I will shit fury all over you and you get sent back to your cat kitchen. You're fucking dead, kiddo.
 						</p>
 			</article>			
@@ -26,9 +31,9 @@
 		
 	<aside>
 		<h3>Social Media & Me =)</h3>
-			<a href="https://www.youtube.com/watch?v=ZmgWXItCfbg"> <img border="0" alt="Please smoke responsibly." width="100" height="100" src="assets/images/youtube.png"> </a>
-			<a href="https://youtu.be/dPR7S-qo8Ag?t=107"> <img border="0" alt="Swords are cool." width="100" height="100" src="assets/images/greatball.png"> </a>
-			<a href="https://i.kym-cdn.com/photos/images/newsfeed/001/196/011/332.jpg"> <img border="0" alt="Bought by the same people who run Ebay!" width="100" height="100" src="assets/images/stumble.png"> </a>
+			<a href="https://www.youtube.com/watch?v=ZmgWXItCfbg"> <img border="0" alt="Please smoke responsibly." width="75" height="75" src="assets/images/youtube.png"> </a>
+			<a href="https://youtu.be/dPR7S-qo8Ag?t=107"> <img border="0" alt="Swords are cool." width="75" height="75" src="assets/images/greatball.png"> </a>
+			<a href="https://i.kym-cdn.com/photos/images/newsfeed/001/196/011/332.jpg"> <img border="0" alt="Bought by the same people who run Ebay!" width="75" height="75" src="assets/images/stumble.png"> </a>
 	</aside>
 			
 	<footer>
